# Shadow-Detector

./: README.md
T2/: CMakeLists.txt
T2/include/: ShadowDetector.h  Utility.h
T2/src/: ShadowDetector.cpp  Utility.cpp  main.cpp
